--- a/bsconfig.json
+++ b/bsconfig.json
@@ -467,7 +467,8 @@
                 "a.ml"
             ]
     }  
-    // , "generate-merlin" : true
+    , "bsc-flags" : ["-w -40-30", "-w +a"]
+    , "generate-merlin" : true
     // "ppx-flags": ["reason/bin/reactjs_jsx_ppx"]
     // ,
     // "bs-dependencies" : ["mocha"]
