--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -72,7 +72,7 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	gpr_904_test gpr_858_unit2_test inner_unused \
 	set_gen bal_tree string_set string_set_test \
 	math_test bal_set_mini gpr_974_test test_cpp\
-	global_module_alias_test
+	global_module_alias_test class_fib_open_recursion_test
 
 
 
