--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -93,7 +93,7 @@ ext/hashtbl_make.ml: ext/hashtbl.cppo.ml
 	cppo -D TYPE_FUNCTOR $< -o $@
 ## Stubs 
 .c.o:
-	$(NATIVE) -ccopt -o -ccopt $@ -c $< 
+	$(NATIVE) -ccopt -O2 -ccopt -o -ccopt $@ -c $< 
 
 STUBS_OBJS=stubs/ext_basic_hash_stubs.o
 
@@ -138,6 +138,7 @@ OUNIT_TESTS_SRCS =  ounit_tests_util \
 	ounit_json_tests ounit_map_tests \
 	ounit_ordered_hash_set_tests \
 	ounit_vec_test \
+	ounit_data_random\
 	ounit_string_tests\
 	ounit_topsort_tests\
 	ounit_sexp_tests\
@@ -271,7 +272,7 @@ bsb.cmxa:$(BSB_CMXS)
 
 check:  $(EXT_CMXS) $(COMMON_CMXS) $(SYNTAX_CMXS) $(DEPENDS_CMXS) $(CORE_CMXS) $(BSB_CMXS) $(OTHER_CORE_CMXS) $(MAIN_CMXS) $(OUNIT_CMXS) $(OUNIT_TESTS_CMXS)
 
-bin/bsb.exe: ext.cmxa common.cmxa  bsb.cmxa bsb/bsb_main.cmx
+bin/bsb.exe: bs_hash.cmxa ext.cmxa common.cmxa  bsb.cmxa bsb/bsb_main.cmx
 	$(NATIVE) -g  unix.cmxa str.cmxa $^ -o $@
 
 # bin/bsc:  ext.cmxa common.cmxa  depends.cmxa syntax.cmxa core.cmxa
