--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -212,8 +212,10 @@ SYNTAX_SRCS=ast_derive_constructor ast_derive_util ast_exp ast_external ast_lift
 	ast_derive ast_comb ast_attributes ast_core_type ast_derive_dyn\
 	 ast_derive_projector \
 	 ast_ffi_types\
-	ast_external_attributes \
-	ast_util ppx_entry
+	 ast_external_attributes\
+	 ast_util\
+	 ppx_entry
+# not a good name ast_util	 
 SYNTAX_CMXS=$(addprefix syntax/, $(addsuffix .cmx, $(SYNTAX_SRCS)))
 DEPENDS_SRCS= depends_post_process bs_exception ast_extract binary_ast  
 DEPENDS_CMXS=$(addprefix depends/, $(addsuffix .cmx, $(DEPENDS_SRCS)))
