--- a/bsconfig.json
+++ b/bsconfig.json
@@ -26,6 +26,7 @@
     //     "cmd" : "cat"
     // },
     "sources": {
+        
         "dir": "jscomp/test/",
         // "resources" : 
         // [
@@ -34,6 +35,28 @@
         // ]
         // ,
         "subdirs": [
+            {
+                "dir" : "xx",
+                "files" : [ ]
+                             
+                             
+                            ,
+                "type" : "dev", 
+                "subdirs" : [
+                    { "dir" : 
+                    "fake_1" },
+                    { "dir" : "fake_2" }
+                ]
+
+            },
+            {
+                "dir" : "yy",
+                "type" : "dev",
+                "subdirs": [
+                    "fake_1",
+                    "fake_2"
+                ]
+            },
             {
                 "dir": "acyc",
                 "files": [
