--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -256,6 +256,7 @@ BSB_SRCS= bsb_config bsb_build_schemas bsb_build_util \
 	bsb_dep_infos\
 	 bsb_gen\
 	 bsb_file\
+	 bsb_config_parse\
 	bsb_unix
 
 BSB_CMXS=$(addprefix bsb/, $(addsuffix .cmx, $(BSB_SRCS)))
