--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "email": "bobzhang1988@gmail.com"
     }
   ],
-  "license": "see LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
     "url": "https://github.com/bloomberg/bucklescript/issues"
   },
